# pykeigan_usb

./: README.md  setup.cfg
.github/workflows/: python-package.yml
old/: read_info.py  run_test.py  rw_register.py
pykeigan_usb/: __init__.py  device_usb.py  keigan_base.py  keigan_imu.py  keigan_info.py  keigan_led.py  keigan_measurement.py  keigan_motion.py  keigan_motor_usb.py  keigan_setting.py  keigan_status.py  keigan_system.py
tests/: test_info.py  test_led.py  test_status.py
