[metadata]
name = pykeigan_usb
description = Keigan motor control library for connected usb
version = attr: pykeigan_usb.__version__
license = file: license.txt
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[flake8]
max-line-length = 120
ignore = E265, E126, E241

[options]
install_requires = 
    pyserial >= "3.5"