[metadata]
name = pykeigan-usb
description = Keigan motor control library for connected usb
version = 1.1.0
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[flake8]
max-line-length = 120
ignore = E265, E126, E241

[options]
packages = find:
python_requires = >=3.6, <4
install_requires = 
    pyserial >= 3.5